--- a/src/Progress.css
+++ b/src/Progress.css
@@ -14,57 +14,6 @@
     padding: 20px;
   }
   
-  .file-input-container {
-    margin-bottom: 20px;
-  }
-  
-  .file-input-container input[type="file"] {
-    display: none;
-  }
-  
-  .file-input-container button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-
-  .file-input-label{
-
-    color: black;
-  }
-  
-  .upload-progress {
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    width: 30%;
-    text-align: center;
-  }
-  
-  .progress-bar {
-    background-color: #eee;
-    height: 20px;
-    border-radius: 3px;
-    overflow: hidden;
-  }
-  
-  .progress {
-    background-color: black;
-    height: 100%;
-    width: 0;
-    text-align: center;
-    line-height: 20px;
-    color: #fff;
-    font-weight: bold;
-  }
-
-  .selected-image-preview{
-    height:400px;
-    border: 2px solid black;
-    padding: 20px;
-  }
 
   .progBut{
     width:20%;
@@ -73,4 +22,128 @@
     border: none;
     border-radius: 20px;
     cursor: pointer;
+  }
+
+  .goalchoose{
+    font-family: 'Noto Serif', sans-serif;
+    font-weight: bold;
+    font-size: 7vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+    padding: 10px;
+  }
+  .grid-item {
+  
+    padding: 20px;
+    font-size: 3vh;
+    font-family: 'Noto Serif', sans-serif;
+    font-weight: bold;
+    text-align: center;
+  }
+
+.workout-image{
+  height: 18vw;
+  width: 18vw;
+  padding: 15px;
+  border: 5px solid black;
+} 
+
+.workout-image:hover{
+
+  background-color: black;
+
+} 
+
+  .goal-button{
+    background-color: black;
+    color: white;
+    border-radius: 100%;
+    margin-left:80px;
+    margin-right: 80px;
+    height: 300px;
+    width:300px;
+    font-family: 'Noto Serif', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+  }
+
+  .goal-selected{
+    background-color: orange;
+    color: black;
+    border-radius: 100%;
+    margin-left:80px;
+    margin-right: 80px;
+    height: 300px;
+    width:300px;
+    font-family: 'Noto Serif', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+  }
+
+  .goal-button:hover{
+    background-color: #fff;
+    color: black;
+  }
+
+  .progress-bar {
+   
+    border: 3px solid black;
+  }
+
+  .buffer{
+    height:20vh;
+  }
+  
+  .progress-bar-inner {
+    height: 60px;
+    background-color: black;
+    color: brown;
+    width: 0;
+  /*  animation: colorChange 5s infinite; */
+    transition: width 0.2s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 4vh;
+  }
+  
+  @keyframes colorChange {
+    0% {
+      background-color: #FF5733; /* Initial color */
+    }
+    10% {
+      background-color: #FFC300;
+    }
+    20% {
+      background-color: #33FF57;
+    }
+    30% {
+      background-color: #3377FF;
+    }
+    40% {
+      background-color: #CC33FF;
+    }
+    50% {
+      background-color: #FF3333;
+    }
+    60% {
+      background-color: #33FFD5;
+    }
+    70% {
+      background-color: #FF33A8;
+    }
+    80% {
+      background-color: #3333FF;
+    }
+    90% {
+      background-color: #33FF33;
+    }
+    100% {
+      background-color: #FF5733; /* Back to initial color */
+    }
   }
