--- a/src/Profile.css
+++ b/src/Profile.css
@@ -20,7 +20,7 @@
 
 .profile {
     max-width: 500px;
-    margin: 0px;
+    margin-top: 10vh;
     padding: 20px;
  /*   translate: 0px 20px; */
     border-radius: 5px;
@@ -30,9 +30,19 @@
   
   .profile h2 {
     font-size: 1.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-top: 0px;
     color: brown;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Noto Serif', sans-serif; 
+  }
+
+  .profile h3 {
+    font-size: 1rem;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    color: orange;
     text-align: center;
     font-weight: bold;
     font-family: 'Noto Serif', sans-serif; 
@@ -87,9 +97,8 @@
     align-items: center;
   }
   
-  .proB,
-  .goBackButton {
-    width: 48%;
+  .proB {
+    width: 100%;
     padding: 10px;
     background-color: brown;
     color: #fff;
@@ -104,7 +113,5 @@
     background-color: orange;
   }
 
-  .goBackButton:hover {
-    background-color: orange;
-  }
+
   
