--- a/src/Progress.css
+++ b/src/Progress.css
@@ -99,6 +99,17 @@
     color: black;
   }
 
+  .prBut{
+
+    background-color: black;
+    height: 7.5vh;
+    width:500px;
+    font-family: 'Noto Serif', sans-serif;
+    font-weight: bold;
+    font-size: 3vh;
+    border-radius: 10px;
+  }
+
   .progress-bar {
    
     border: 3px solid black;
