--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -63,7 +63,9 @@
   margin-left: 20px;
   display: flex; /* Display items horizontally */
   flex-direction: row; /* Set direction to row */
+  color: brown;
 }
+
 
 .navbar li { 
   margin-right: 20px;
@@ -139,19 +141,28 @@
 }
 
 
-.navbar a {
+.naLI {
   color: #fff;
   text-decoration: none;
    
   font-size: 1.2rem;
 }
 
-.navbar a:hover {
+.naLI:hover {
   font-weight: bold;
   text-decoration: none;
    
   font-size: 1.5rem;
 }
+
+.naLI1 {
+  color: brown;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+
 
 .dashboard-search-container {
   width: 80%;
