--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: -10px;
   margin-bottom: 30px;
   margin-left: 18vw;
   border: 2px solid black;
@@ -182,6 +182,48 @@
   border: 1px solid #ccc;
   border-radius: 3px;
   font-size: 1rem;
+}
+
+.change{
+  width: 12%;
+  font-weight: bold;
+  padding: 10px;
+  font-size: 3vh;
+  border-radius: 3px;
+  margin-left: 20px;
+  margin-right:20px;
+  margin-bottom: 20px;
+  
+}
+.changeBorder{
+  margin-left: 38vw;
+  margin-bottom: 20px;
+  font-size: 3vh;
+  font-weight: bold;
+  font-family: 'Noto Serif', sans-serif; 
+}
+.updateText{
+  text-align: center;
+  font-weight: bold;
+  font-size: 5vh;
+  font-family: 'DM Serif Display', serif;
+}
+
+.prBut2{
+
+  background-color: black;
+  height: 7.5vh;
+  width:25vw;
+  font-family: 'Noto Serif', sans-serif;
+  font-weight: bold;
+  font-size: 3vh;
+  border-radius: 10px;
+}
+
+.prbutton2-container{
+  text-align: center;
+  
+  margin-bottom: 30px;
 }
 
 .main-content {
